--- a/2mk2-BertSentenceSimilarity.ipynb
+++ b/2mk2-BertSentenceSimilarity.ipynb
@@ -502,7 +502,7 @@
    "metadata": {},
    "source": [
     "## Similarity\n",
-    "I am using cosiminlarity since we have a 1 dimentional array. "
+    "I am using cosine similiarty since we have a 1 dimentional array. "
    ]
   },
   {
