--- a/2mk2-BertSentenceSimilarity.ipynb
+++ b/2mk2-BertSentenceSimilarity.ipynb
@@ -502,7 +502,7 @@
    "metadata": {},
    "source": [
     "## Similarity\n",
-    "I am using cosine similiarty since we have a 1 dimentional array. "
+    "I am using cosiminlarity since we have a 1 dimentional array. "
    ]
   },
   {
@@ -546,9 +546,7 @@
     }
    ],
    "source": [
-    "cos_sim = dot(a, b)/(norm(a)*norm(b))\n",
-    "\n",
-    "print(cos_sim)\n"
+    "cos_sim = dot(a, b)/(norm(a)*norm(b))\n"
    ]
   },
   {
@@ -556,7 +554,43 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "print(cos_sim)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scipy import spatial\n",
+    "\n",
+    "dataSetI = a\n",
+    "dataSetII = b\n",
+    "result = 1 - spatial.distance.cosine(dataSetI, dataSetII)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5735096335411072"
+      ]
+     },
+     "execution_count": 100,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result\n"
+   ]
   }
  ],
  "metadata": {
